syntax = "proto3";

                 package mfaAmrClaim;
service MfaAmrClaimService {
 rpc createMfaAmrClaim (MfaAmrClaimCreateInput) returns (MfaAmrClaim) {}
rpc mfaAmrClaims (findManyParams) returns (stream MfaAmrClaim) {}
rpc mfaAmrClaim (MfaAmrClaimWhereUniqueInput) returns (MfaAmrClaim) {}
rpc updateMfaAmrClaim (MfaAmrClaimUpdateInput) returns (MfaAmrClaim) {}
rpc deleteMfaAmrClaim (MfaAmrClaimWhereUniqueInput) returns (MfaAmrClaim) {} 
 }
message MfaAmrClaimCreateInput {
string authenticationMethod = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message MfaAmrClaim {
string authenticationMethod = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message MfaAmrClaimWhereUniqueInput {
string authenticationMethod = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message MfaAmrClaimUpdateInput {
string authenticationMethod = 1;
string createdAt = 2;
string id = 3;
string updatedAt = 4;
};
message findManyParams {

};